<resources>
    <string name="app_name">ONScripter Plus</string>
    <string name="empty"></string>
    <string name="website_thanks">http://onscripter.sourceforge.jp/android/android.html</string>
    <string name="website_privay_policy">https://matthewn4444.github.io/public/onscripter-plus/privacy/</string>
    <string name="website_github">http://git.io/M5fI7g</string>
    <string name="author">Matthew Ng</string>
    <string name="email">matthewn4444@gmail.com</string>
    <string name="directory_back">(Back)</string>
    <string name="dialog_quit_button">Quit</string>
    <string name="default_font_file">default.ttf</string>
    <string name="assets_font_folder">fonts</string>
    <string name="button_rclick">Right Click</string>
    <string name="button_lclick">Left Click</string>
    <string name="button_left">Wheel Up</string>
    <string name="button_right">Wheel Down</string>
    <string name="button_up">Next Button</string>
    <string name="button_down">Prev Button</string>
    <string name="menu_automode">Automode</string>
    <string name="menu_skip">Skip</string>
    <string name="menu_speed">Change Speed</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_show_buttons">Show Buttons</string>
    <string name="menu_hide_buttons">Hide Buttons</string>
    <string name="menu_version">Version</string>
    <string name="menu_quit">Quit</string>
    <string name="message_cannot_find_internal_storage">Cannot find internal memory, something went wrong!</string>
    <string name="message_loading_fonts">Loading fonts&#8230;</string>
    <string name="message_asset_not_found">Could not find default font file in assets!</string>
    <string name="message_private_dir_not_found">Could not find private directory!</string>
    <string name="message_internal_write_error">Could not write font file to internal storage!</string>
    <string name="message_read_font_error">Could not read font!</string>
    <string name="message_cannot_write_pref">There is not enough memory to save settings.</string>
    <string name="message_folder_exists">Folder already exists, create a new one.</string>
    <string name="message_corrupt_save_file">Cannot load save file because it is corrupted. Please choose another.</string>
    <string name="message_missing_label_define">The game crashed on game start up because it was missing game files or they were corrupted.\nPlease make sure you have copied all the game files properly.</string>
    <string name="message_multiple_script_files">Found multiple scripts files for this game listed below. Only the script file in the immediate game folder will be used.\n\nUnused:</string>
    <string name="message_ponscripter_not_supported">Cannot run this game because PONScripter games are not supported.</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_remove_ads">Remove Ads</string>
    <string name="menu_action_change_folder">Change Folder</string>
    <string name="settings_general_header">General</string>
    <string name="settings_render_cate">Render</string>
    <string name="settings_render_font_outline_key">settings.render.font.outline.key</string>
    <string name="settings_render_font_outline_summary">Displays an outline for each character for easier reading.</string>
    <string name="settings_render_font_outline_title">Render Font Outline</string>
    <string name="settings_controls_cate">Controls</string>
    <string name="settings_controls_display_key">settings.controls.display.key</string>
    <string name="settings_controls_display_summary">Hides controls until user swipes to display them.</string>
    <string name="settings_controls_display_title">Swipe to Show Controls</string>
    <string name="settings_controls_swipe_key">settings.controls.swipe.key</string>
    <string name="settings_controls_swipe_summary">Gesture to show the controls when controls are hidden.</string>
    <string name="settings_controls_swipe_title">Swipe Gesture</string>
    <string name="settings_folder_cate">Folder</string>
    <string name="settings_folder_default_key">settings.folder.default.key</string>
    <string name="settings_folder_default_summary">Select a default folder location to read visual novel files.</string>
    <string name="settings_folder_default_title">Select Default Folder</string>
    <string name="settings_save_folder_key">settings.save.folder.key</string>
    <string name="settings_about_cate">About</string>
    <string name="settings_about_key">settings.about.key</string>
    <string name="settings_about_app_key">settings.about.app.key</string>
    <string name="settings_about_author_header">Author:</string>
    <string name="settings_about_og_author_header">Studio O.G.A.:</string>
    <string name="settings_about_version_header">Version:</string>
    <string name="settings_about_github_header">Website:</string>
    <string name="settings_about_summary">This application is open source and free. If you plan to use the code, please mention Studio O.G.A. Ogapee and I.</string>
    <string name="settings_about_thanks_text">Thanks to Studio O.G.A. Ogapee (original author) for the source and instructions to run and build this app.</string>
    <string name="settings_about_change_log_title">View Change Log</string>
    <string name="settings_about_change_log_key">settings.about.change.log.key</string>
    <string name="settings_about_privacy_policy_title">Privacy Policy</string>
    <string name="settings_about_privacy_policy_key">settings.about.privacy.policy.key</string>
    <string name="settings_appearance_cate">Appearance</string>
    <string name="settings_theme_key">settings.theme.key</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_default_entry">White</string>
    <string name="settings_theme_default_value">0</string>
    <string-array name="settings_theme_entries">
        <item>@string/settings_theme_default_entry</item>
        <item>Black</item>
    </string-array>
    <string-array name="settings_theme_values">
        <item>@string/settings_theme_default_value</item>
        <item>1</item>
    </string-array>
    <string name="settings_playback_cate">Playback</string>
    <string name="settings_external_video_key">settings.external.video.key</string>
    <string name="settings_external_video_title">Use External Video Player</string>
    <string name="settings_use_hq_audio_key">settings.use.hq.audio.key</string>
    <string name="settings_use_hq_audio_title">Use High Quality Audio</string>
    <string name="settings_multiple_scripts_dont_show_again_key">settings.multiple.scripts.dont.show.again.key</string>
    <string name="dialog_choose_folder_title">Choose a folder</string>
    <string name="dialog_select_button_text">Select</string>
    <string name="dialog_back_button_text">Back</string>
    <string name="dialog_next_button_text">Next</string>
    <string name="dialog_close_app">Close App</string>
    <string name="dialog_reboot">Reboot</string>
    <string name="dialog_ext_not_found">Send matthewn4444@gmail.com sdcard location.</string>
    <string name="dialog_add_translation">Add a translation for your language by emailing me at</string>
    <string name="dialog_please_wait">Please wait&#8230;</string>
    <string name="dialog_create_new_folder">Create new folder</string>
    <string name="dialog_button_rate">Rate this App!</string>
    <string name="dialog_multiple_scripts_dont_show_again">OK, don\'t show again</string>
    <string name="dialog_settings_controls_title">Controls</string>
    <string name="dialog_settings_text_title">Text</string>
    <string name="dialog_settings_controls_global">These control settings are set globally.</string>
    <string-array name="settings_controls_swipe_entries">
        <item>Swipe from both sides</item>
        <item>Swipe from left</item>
        <item>Swipe from right</item>
    </string-array>
    <string name="settings_controls_swipe_default_value">0</string>
    <string-array name="settings_controls_swipe_values">
        <item>@string/settings_controls_swipe_default_value</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="dialog_settings_controls_display_title">Swipe to Show Controls</string>
    <string name="dialog_settings_controls_swipe_title">Swipe Gesture</string>
    <string name="dialog_settings_text_upscaling">Set the dialogue text upscaling.</string>
    <string name="dialog_settings_text_upscaling_scale">Scale Size:</string>
    <string name="dialog_settings_text_upscaling_text">English 日本語</string>
    <string name="game_pref_name">game_name_key</string>
    <string name="message_copy_completed">Copy completed. The default folder has been switched to internal storage.</string>
    <string name="message_copy_saves_completed">Finished copying save files.</string>
    <string name="message_copy_failed">Copy failed.</string>
    <string name="message_copy_failed_no_space">Internal file storage is full, cannot copy game files.</string>
    <string name="message_copy_failed_no_files">There are no files to copy.</string>
    <string name="message_kitkat_save_issue">Since Android Kitkat 4.4.X, some phones have blocked access for this application to be unable to save to external SD cards. This is the reason why you can\'t save.\nPlease choose how to fix this issue.</string>
    <string name="message_save_folder_missing">Save folder does not exist.</string>
    <string name="message_move_save_files_back">You can now write to SDCard and you have save files in internal storage, would you like to move them back to this folder?.</string>
    <string name="message_user_handle_left_over_saves">You are now able to write. You will have to copy the left over saves files to their original game folders. This application will read the save files from the game folders and not from the save folder anymore.</string>
    <string name="message_su_sdcard_fix_no_file">Cannot fix write permissions for external SDCard because plaform.xml does not exist.</string>
    <string name="message_su_sdcard_fix_exists_no_write">Cannot apply fix to system, have you tried to reboot? If you already tried to reboot, please report this to matthewn4444@gmail.com.</string>
    <string name="message_su_sdcard_fix_issue">Unable to change system files. Please report this to matthewn4444@gmail.com.</string>
    <string name="message_restart_device">For the changes to apply, please reboot the device.</string>
    <string name="message_loading_ads">Loading ads&#8230; (purchase the ad free version if you don\'t like ads.\nWait %d sec&#8230;</string>
    <string name="menu_action_change_save_folder">Change Save Folder</string>
    <string name="dialog_choose_save_folder_title">Choose a save folder</string>
    <string name="dialog_fix_sd_card_write_title">Choose how to fix saving</string>
    <string name="dialog_scan_files_title">Scanning files</string>
    <string name="dialog_copy_files_title">Copying files</string>
    <string name="dialog_choose_copy_dst_title">Select copy destination</string>
    <string name="dialog_copy_files_filename">File:</string>
    <string name="dialog_copy_files_filesize">Size:</string>
    <string name="dialog_select_files_copy_title">Select files to copy</string>
    <string name="dialog_bytes_remaining">Available space left:</string>
    <string name="dialog_override_files">(Replacing some files)</string>
    <string name="dialog_su_sdcard_fix_desc">This operation will fix writing to the external SD card. This will modify system files as a root user.\n\n<b>This app is not responsible for any issues for this phone and by accepting, you are responsible for any issues that may happen.</b>\n\nThis will write "media_rw" to groups in the file /system/etc/permissions/platform.xml under WRITE_EXTERNAL_STORAGE permission.</string>
</resources>