<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/settings_appearance_cate">
        <com.onscripter.plus.ListPreferencePlus android:title="@string/settings_theme_title"
            android:key="@string/settings_theme_key"
            android:entries="@array/settings_theme_entries"
            android:entryValues="@array/settings_theme_values"
            android:defaultValue="@string/settings_theme_default_value"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_render_cate">
        <CheckBoxPreference
            android:defaultValue="@bool/render_font_outline"
            android:summary="@string/settings_render_font_outline_summary"
            android:key="@string/settings_render_font_outline_key"
            android:title="@string/settings_render_font_outline_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_controls_cate">
        <CheckBoxPreference
            android:summary="@string/settings_controls_display_summary"
            android:key="@string/settings_controls_display_key"
            android:title="@string/settings_controls_display_title"/>
        <ListPreference
            android:dependency="@string/settings_controls_display_key"
            android:summary="@string/settings_controls_swipe_summary"
            android:key="@string/settings_controls_swipe_key"
            android:title="@string/settings_controls_swipe_title"
            android:entries="@array/settings_controls_swipe_entries"
            android:defaultValue="@string/settings_controls_swipe_default_value"
            android:entryValues="@array/settings_controls_swipe_values"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_playback_cate">
        <CheckBoxPreference
            android:key="@string/settings_external_video_key"
            android:title="@string/settings_external_video_title"/>
        <CheckBoxPreference
            android:key="@string/settings_use_hq_audio_key"
            android:title="@string/settings_use_hq_audio_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_folder_cate">
        <com.onscripter.plus.FolderBrowserDialogPreference
            android:summary="@string/settings_folder_default_summary"
            android:key="@string/settings_folder_default_key"
            android:title="@string/settings_folder_default_title"/>
    </PreferenceCategory>
</PreferenceScreen>
