<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:baselineAligned="true"
    android:paddingRight="?android:attr/scrollbarSize">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="6dip"
        android:layout_marginBottom="6dip">
        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal" 
            android:text="@string/app_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/about_settings_header_style"
                android:layout_marginRight="5dp"
                android:text="@string/settings_about_version_header"/>
            <TextView style="@style/about_settings_text_style"
                android:text="@string/version_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/about_settings_header_style"
                android:layout_marginRight="5dp"
                android:text="@string/settings_about_author_header"/>
            <TextView style="@style/about_settings_text_style"
                android:text="@string/author"/>
        </LinearLayout>
        <TextView
            android:layout_marginBottom="10dp"
            style="@style/about_settings_text_style"
            android:text="@string/settings_about_summary"
            android:maxLines="3" />
        <TextView
            android:layout_marginBottom="10dp"
            style="@style/about_settings_text_style"
            android:text="@string/settings_about_thanks_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/about_settings_header_style"
                android:layout_marginRight="5dp"
                android:text="@string/settings_about_github_header"/>
            <TextView style="@style/about_settings_text_style"
                android:autoLink="web"
                android:text="@string/website_github"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/about_settings_header_style"
                android:layout_marginRight="5dp"
                android:text="@string/settings_about_og_author_header"/>
            <TextView style="@style/about_settings_text_style"
                android:autoLink="web"
                android:text="@string/website_thanks"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
