<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_change_save_folder"
        android:visible="false"
        android:showAsAction="always"
        android:orderInCategory="98"
        android:icon="@drawable/ic_action_save"
        android:title="@string/menu_action_change_save_folder"/>
    <item
        android:id="@+id/action_remove_ads"
        android:orderInCategory="99"
        android:title="@string/menu_action_remove_ads"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_action_settings"/>
    <item
        android:id="@+id/action_change_folder"
        android:showAsAction="always"
        android:orderInCategory="99"
        android:icon="@drawable/ic_menu_change_folder"
        android:title="@string/menu_action_change_folder"/>
</menu>
