<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vn_settings_text"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/dialog_settings_text_upscaling"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dialog_settings_text_upscaling_scale"/>
        <TextView
            android:id="@+id/scaleNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <FrameLayout
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="30dp"
        android:layout_width="fill_parent">
        <TextView
            android:id="@+id/textPreview"
            android:textColor="@android:color/black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_settings_text_upscaling_text"/>
    </FrameLayout>
    <SeekBar
        android:id="@+id/fontScaler"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>
</LinearLayout>
